# todayintheuk

./: .gitignore  README.md
.github/workflows/: static.yml
output/: index.css  script.js
poll/: pyproject.toml  test_cases.md
poll/legislation/: bills.py
poll/poll/: bills.py  news.py
poll/poll/legislation/: bills.py
poll/tests/: test_bills.py  test_news.py
ssg/: pyproject.toml  template.html.jinja  test_cases.md
ssg/output/: index.css  index.html
ssg/ssg/: ssg.py
ssg/ssg/templates/: template.html.jinja
