[tool.poetry]
name = "ssg"
version = "0.1.0"
description = ""
authors = ["Jonathan Rudman <jonathan.rudman@live.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poll = {path = "../poll"}

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
