[tool.poetry]
name = "ssg"
version = "0.1.0"
description = ""
authors = ["Jonathan Rudman <jonathan.rudman@live.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
poll = {path = "../poll", develop = true}
pip = "^23.3.2"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.poetry.scripts]
today-ssg = "ssg.ssg:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
